# empravilno

./: .env.feature-base-clips.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  deploy.sh  docker-compose.feature-base-clips.yaml  docker-compose.yaml  pyproject.toml
miniapp/: index_test.html
src/app/: container.py  http.py  logging.py  main.py
src/config/: settings.py
src/domain/: models.py  ports.py
src/infrastructure/: memory_store.py  redis_store.py  telemetry.py
src/presentation/: bot.py
src/presentation/keyboards/: common.py  reply.py
src/presentation/middlewares/: logging.py
src/presentation/routers/: chat.py  menu_reply.py  start.py
src/presentation/webhooks/: yoomoney.py
src/services/: nutrition_cleanup.py  openai_client.py  payments.py  rendering.py  subscription_plans.py  text_normalizer.py
src/tg_ai_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/usecases/: message_processing.py
tests/: test_message_processing_topup.py  test_nutrition_cleanup.py  test_subscription_plans.py
